# lab_11MLProject

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
